modified colormap algorithm

--- a/visualization/test.ipynb
+++ b/visualization/test.ipynb
@@ -446,6 +446,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([6, 7, 0]), array([4, 5, 9]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.spatial import KDTree\n",
+    "\n",
+    "indexes = [0,6,7]\n",
+    "distances = [9,4,5]\n",
+    "def dist(i):\n",
+    "    return distances[i]\n",
+    "\n",
+    "indexes, distt = np.array(sorted(zip(indexes, distances), key = lambda datas: datas[1])).reshape([3,2]).T\n",
+    "\n",
+    "indexes, distt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 9), (7, 4), (0, 5)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(indexes, distances))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.2       ,        inf,        inf],\n",
+       "        [0.2       , 0.32695565,        inf]]),\n",
+       " array([[1, 4, 4],\n",
+       "        [2, 0, 4]]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_x = [0.4,0.5,0.1,0.9]\n",
+    "parameter_y = [0.07,0.5,0,0.1]\n",
+    "\n",
+    " \n",
+    "_KDTree = KDTree(np.array([parameter_x, parameter_y]).T)\n",
+    "                    \n",
+    "dist, indexes = _KDTree.query([[0.3,0.5],[0.1,0.2]], k=3, distance_upper_bound=0.4)\n",
+    "dist, indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gq/pyfb45qx3wg52k7kygqcjy840000gn/T/ipykernel_9307/498214772.py:1: RuntimeWarning: All-NaN axis encountered\n",
+      "  np.nanmax([np.nan,np.nan])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmax([np.nan,np.nan])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
