--- a/visualization/test.ipynb
+++ b/visualization/test.ipynb
@@ -554,6 +554,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ciao = \"\"\n",
+    "if ciao:\n",
+    "    print(\"snfsfr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e+00, 7.20048993e+10, 8.10308393e+03])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([0,5,3])\n",
+    "np.exp(X*X)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
